--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -5,12 +5,28 @@ body {
   background: #82cfe8;
   background: linear-gradient(15deg, #82cfe8 0%, #18b6e8 100%);
   background-repeat: no-repeat;
+  font-family: 'Montserrat', sans-serif;
 }
 
-.content {
+ul {
+  list-style: none;
+  padding: 0;
+  margin-left: 25px;
+}
+
+a {
+  text-decoration: none;
+  color: #18b6e8;
+}
+
+.content-2 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -18,18 +34,69 @@ body {
 }
 
 .left {
-  width: 50%;
+  width: 100%;
   color: white;
+  margin: auto;
+  background-position: left;
+  background: #82cfe8;
+  background: linear-gradient(15deg, #82cfe8 0%, #18b6e8 100%);
+  background-repeat: no-repeat;
 }
 
 .right {
-  width: 50%;
   color: #18b6e8;
+  background-color: black;
+  height: 100%;
 }
 
-.sec-1 {
+#sec-1 {
   -webkit-clip-path: polygon(55% 0, 100% 0%, 100% 100%, 45% 100%);
           clip-path: polygon(55% 0, 100% 0%, 100% 100%, 45% 100%);
-  background-color: black;
+  background-color: #132145;
+}
+
+h1 {
+  font-size: 40px;
+  line-height: 40px;
+}
+
+h2, li {
+  font-size: 30px;
+  line-height: 30px;
+}
+
+.text {
+  margin: 50px auto 50px 25px;
+  -webkit-animation: slideInLeft 1.5s;
+          animation: slideInLeft 1.5s;
+}
+
+@-webkit-keyframes slideInLeft {
+  from {
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+    visibility: visible;
+  }
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes slideInLeft {
+  from {
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+    visibility: visible;
+  }
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.animate__slideInLeft {
+  -webkit-animation-name: slideInLeft;
+  animation-name: slideInLeft;
 }
 /*# sourceMappingURL=main.css.map */
