--- a/portfolio/css/_about.scss
+++ b/portfolio/css/_about.scss
@@ -1,13 +1,12 @@
 li {
   font-size: 27px;
   font-weight: 800;
+  margin: 0 15px;
 }
 
 .about {
   padding: 30px 20px 50px 20px;
   color: white;
-  background: rgb(130,207,232);
-  background: linear-gradient(15deg, rgb(141, 210, 233) 0%, rgb(0, 102, 236) 100%);
 
   @include desktop {
     font-size: 20px;
@@ -16,7 +15,7 @@ li {
     } 
 
   a {
-  color: rgb(175, 243, 255);
+  color: color(hot-pink);
   font-style: italic;
   }
 }
@@ -25,7 +24,111 @@ p {
   margin-top: 25px;
   font-weight: 500;
 
+  @include desktop {font-size: 20px;}
+}
+
+.wrap-it {
+  overflow: hidden;
+
+  .no-bg {display: none;}
+
   @include desktop {
-    font-size: 20px;
+    background-image: none;
+    display: flex;
+    justify-content: space-between;
+  
+    .no-bg {
+      align-self: flex-end;
+      width: 360px;
+      display: block;
+      animation: slideInRight 3s;
     }
+  }
+}
+
+.icns {
+  margin: auto;
+  height: 60px;
+
+  @include desktop {
+    height: 80px;
+  } 
+}
+
+.type {
+  margin-top: 0;
+  font-size: 10px;
+  text-align: center;
+  color: white;
+
+  @include desktop {
+    font-size: 14px;
+  } 
+}
+
+.front,
+.back {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+  padding-bottom: 20px;
+  margin: 0 30px;
+
+  @include desktop {
+    gap: 20px;
+    padding-bottom: 30px;
+  } 
+}
+
+.xd,
+.js,
+.css,
+.sass,
+.html,
+.php,
+.sql,
+.bs,
+.wp {text-align: center;}
+
+.grouped {
+  background-color: black;
+  padding-bottom: 50px;
+
+  h2 {
+    padding: 65px 0;
+    color: #283886;
+    text-align: center;
+  }
+}
+
+@-webkit-keyframes slideInRight {
+  from {
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+    visibility: visible;
+  }
+
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes slideInRight {
+  from {
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+    visibility: visible;
+  }
+
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.animate__slideInRight {
+  -webkit-animation-name: slideInRight;
+  animation-name: slideInRight;
 }
