--- a/css/_main.scss
+++ b/css/_main.scss
@@ -210,6 +210,10 @@ h2 {
       }
     }
 
+    .wy {
+      background-image: url(../img/screenshotwy.png);
+    }
+
     .dsr {
       background-image: url(../img/screenshotdsr.png);
     }
@@ -230,6 +234,11 @@ h2 {
       background-image: url(../img/screenshotrmfw.png);
     }
 
+    
+    .ks {
+      background-image: url(../img/screenshotks.png);
+    }
+
     .swiper {
       background-image: url(../img/Screenshot_5.png);
     }
@@ -244,6 +253,10 @@ h2 {
 
     .cfb {
       background-image: url(../img/screenshotcfb.png);
+    }
+
+    .spp {
+      background-image: url(../img/screenshotspp.png);
     }
   }
 
