--- a/css/_main.scss
+++ b/css/_main.scss
@@ -505,6 +505,7 @@ p {
 .icns {
   margin: auto;
   height: 60px;
+  width: 60px;
   margin-bottom: 5px;
 
   @include media-query('min', $desktop) {
