--- a/css/_main.scss
+++ b/css/_main.scss
@@ -1,28 +1,3 @@
-$colors: (
-  dark-blue: #283886,
-  hot-pink: #e90482,
-  light-blue: #45e0e5,
-);
-
-@function color($color-code) {
-  @return map-get($colors, $color-code);
-}
-
-$desktop: 760px;
-$tablet: 1080px;
-
-@mixin media-query($type, $size) {
-  @if $type == 'min' {
-    @media (min-width: #{$size}) {
-      @content;
-    }
-  } @else if $type == 'max' {
-    @media (max-width: #{$size}) {
-      @content;
-    }
-  }
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -45,15 +20,33 @@ nav {
   background-color: black;
 
   a {
+    color: #3139a1;
     font-family: 'Courier New', Courier, monospace;
     font-weight: 700;
     font-size: 1.2rem;
     text-decoration: none;
-    color: #3139a1;
-    transition-duration: .5s;
+    overflow: hidden;
+    transition: color 0.3s ease-in-out;
 
-    &:hover {
-      color: color(hot-pink);
+    @include media-query('min', $desktop) {
+      &:hover {
+        color: color(hot-pink);
+      }
+    
+      &:before {
+        content: attr(data-content);
+        position: absolute;
+        overflow: hidden;
+        max-width: 0;
+        color: color(hot-pink);
+        white-space: nowrap;
+        transition: max-width 0.3s ease-in-out;
+      }
+    
+      &:hover:before {
+        max-width: 100%;
+        animation: loading 0.3s ease-in-out forwards;
+      }
     }
   }
 }
@@ -139,6 +132,7 @@ h2 {
 
 .demo {
   margin-top: auto;
+  align-self: flex-start;
 
   button {
     padding: 3px 7px;
@@ -174,39 +168,50 @@ h2 {
     color: #3139a1;
   }
 
+  h4 {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 16px;
+  }
+
   .project {
     color: white;
-    margin: 5px;
-    padding: 3px;
-    border-top-left-radius: 35px;
-    border-bottom-right-radius: 35px;
+    margin: 5px 10px;
+    // padding: 3px;
     display: flex;
     flex-direction: column;
 
     p {
       margin: 0;
-      padding: 8px;
+      padding: 8px 0;
       font-size: 14px;
       font-weight: 500;
+      text-align: left;
     }
 
     h3 {
-      font-size: 25px;
-      padding: 10px 0 15px;
+      font-size: 22px;
+      padding: 5px 0;
       color: white;
+      text-align: left;
+    }
+
+    .project-bg-wrap {
+      background-color: color(dark-blue);
     }
 
     .project-bg {
       background-position: center;
       background-size: cover;
       padding: 150px 0 0 0;
-      margin: 0 10px;
-      border: 4px solid white;
       filter: grayscale(1);
+      transition: ease-in-out 0.2s;
+      clip-path: polygon(30% 0%, 100% 0, 100% 70%, 70% 100%, 0 100%, 0% 30%);
 
       &:hover {
         filter: grayscale(0);
         cursor: pointer;
+        transition: ease-in-out 0.2s;
+        clip-path: polygon(20% 0%, 100% 0, 100% 100%, 80% 100%, 0 100%, 0 0);     
       }
     }
 
@@ -267,17 +272,29 @@ h2 {
     }
 
     .project {
-      width: 320px;
+      max-width: 320px;
     }
   }
 }
 
-
-.no-margin {
-    @media (max-width: 768px) {
-        margin-right: 0 !important;
+.icon-wrap {
+  perspective: 1000px;
+  text-align: center;
+  .icns {
+    transform: rotateY(0); 
+    transition: transform 0.6s; 
+    transform-style: preserve-3d;
+    &:hover {
+      transform: rotateY(360deg);
     }
+  }
 }
+
+// .no-margin {
+//     @media (max-width: 768px) {
+//         margin-right: 0 !important;
+//     }
+// }
 
 .text {
   margin: 50px auto 50px 25px;
@@ -303,74 +320,25 @@ h2 {
   }
 }
 
-@keyframes nameAnim {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes slideInDown {
-  from {
-    transform: translate3d(0, -180%, 0);
-    visibility: visible;
-  }
-
-  to {
-    transform: translate3d(0, 0, 0);
-  }
-}
-
-.animate__slideInDown {
-  animation-name: slideInDown;
-}
-
-@keyframes bounceInDown {
-  from,
-  60%,
-  75%,
-  90%,
-  to {
-    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-  }
-
-  0% {
-    opacity: 0;
-    transform: translate3d(0, -3000px, 0) scaleY(3);
-  }
-
-  80% {
-    opacity: 1;
-    transform: translate3d(0, 25px, 0) scaleY(0.9);
-  }
-
-  to {
-    transform: translate3d(0, 0, 0);
-  }
-}
-
-.animate__bounceInDown {
-  animation-name: bounceInDown;
-}
-
 .up {
   margin-right: 15px;
 
+    
   .fas {
     color: color(light-blue);
     font-size: 40px;
     margin-bottom: 50px;
-
+    transition: ease-in-out 0.2s;
+    background-color: #000;
+    border-radius: 50%;
     @include media-query('min', $desktop) {
       margin-right: 50px;
       font-size: 50px;
     }
 
     &:hover {
-      transform: scale(1.1);
+      scale: 1.1;
+      transition: ease-in-out 0.2s;
     }
   }
 }
@@ -425,36 +393,71 @@ footer {
         display: none;
     }
 }
-  
 
 .btn-outline-custom {
+  position: relative;
+  display: inline-block;
   border: 1px solid color(light-blue);
   border-radius: 0;
   color: color(light-blue);
-  transition: all ease-in-out .2s;
-  margin: 3px 0;
+  margin: 2px 0px;
+  overflow: hidden;
+  transition: color 0.4s ease;
+}
 
-  a {
-    text-decoration: none;
-    transition: all ease-in-out .2s;
-  }
+.btn-outline-custom::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  animation: borderAnimation2 0.4s forwards;
+  transition: width 0.4s ease;
+}
 
-  &:hover {
-    border: 1px solid #fff;
-    color: #fff;
-  }
+.btn-outline-custom:hover {
+  color: #fff;
+  border: 1px solid #fff;
+}
+
+.btn-outline-custom:hover::before {
+  width: 100%;
 }
 
 .btn-outline-white {
+  position: relative;
+  display: inline-block;
   border: 1px solid #fff;
   border-radius: 0;
   color: #fff;
   margin: 20px 0px;
+  overflow: hidden;
+  transition: color 0.4s ease;
+}
 
-  &:hover {
-    border: 1px solid #229cff;
-    color: #229cff;
-  }
+.btn-outline-white::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  border-top: 1px solid #3139a1;
+  border-bottom: 1px solid #3139a1;
+  animation: borderAnimation1 0.4s forwards;
+  transition: width 0.4s ease;
+}
+
+.btn-outline-white:hover {
+  color: #3139a1;
+  border: 1px solid #3139a1;
+}
+
+.btn-outline-white:hover::before {
+  width: 100%;
 }
 
 .more-link {
@@ -539,23 +542,6 @@ p {
   }
 }
 
-.xd,
-.js,
-.css,
-.sass,
-.html,
-.php,
-.sql,
-.bs,
-.wp {
-  text-align: center;
-
-  &:hover {
-    transform: scale(1.1);
-    transition: all ease-in-out .2s;
-  }
-}
-
 .grouped {
   background-color: black;
   padding-bottom: 50px;
@@ -564,479 +550,4 @@ p {
     color: #283886;
     text-align: center;
   }
-}
-
-@keyframes slideInRight {
-    from {
-      transform: translate3d(100%, 0, 0);
-      visibility: visible;
-    }
-  
-    to {
-      transform: translate3d(0, 0, 0);
-    }
-  }
-  
-.animate__slideInRight {
-animation-name: slideInRight;
-}
-
-@keyframes fadeIn {
-from {
-    opacity: 0;
-}
-
-to {
-    opacity: 1;
-}
-}
-
-.animate__fadeIn {
-animation-name: fadeIn;
-}
-
-@keyframes fadeInUp {
-from {
-    transform: translate3d(0, 100%, 0);
-    opacity: 0;
-}
-
-to {
-    transform: translate3d(0, 0, 0);
-    opacity: 1;
-}
-}
-
-.animate__fadeInUp {
-animation-name: fadeInUp;
-}
-
-@keyframes fadeInDown {
-from {
-    transform: translate3d(0, -100%, 0);
-    opacity: 0;
-}
-
-to {
-    transform: translate3d(0, 0, 0);
-    opacity: 1;
-}
-}
-
-.animate__fadeInDown {
-animation-name: fadeInDown;
-}
-
-@keyframes fadeInLeft {
-from {
-    transform: translate3d(-100%, 0, 0);
-    opacity: 0;
-}
-
-to {
-    transform: translate3d(0, 0, 0);
-    opacity: 1;
-}
-}
-
-.animate__fadeInLeft {
-animation-name: fadeInLeft;
-}
-
-@keyframes fadeInRight {
-from {
-    transform: translate3d(100%, 0, 0);
-    opacity: 0;
-}
-
-to {
-    transform: translate3d(0, 0, 0);
-    opacity: 1;
-}
-}
-
-.animate__fadeInRight {
-animation-name: fadeInRight;
-}
-
-@keyframes fadeOut {
-from {
-    opacity: 1;
-}
-
-to {
-    opacity: 0;
-}
-}
-
-.animate__fadeOut {
-animation-name: fadeOut;
-}
-
-@keyframes fadeOutUp {
-from {
-    transform: translate3d(0, 0, 0);
-    opacity: 1;
-}
-
-to {
-    transform: translate3d(0, -100%, 0);
-    opacity: 0;
-}
-}
-
-.animate__fadeOutUp {
-animation-name: fadeOutUp;
-}
-
-@keyframes fadeOutDown {
-from {
-    transform: translate3d(0, 0, 0);
-    opacity: 1;
-}
-
-to {
-    transform: translate3d(0, 100%, 0);
-    opacity: 0;
-}
-}
-
-.animate__fadeOutDown {
-animation-name: fadeOutDown;
-}
-
-@keyframes fadeOutLeft {
-from {
-    transform: translate3d(0, 0, 0);
-    opacity: 1;
-}
-
-to {
-    transform: translate3d(-100%, 0, 0);
-    opacity: 0;
-}
-}
-
-.animate__fadeOutLeft {
-animation-name: fadeOutLeft;
-}
-
-@keyframes fadeOutRight {
-from {
-    transform: translate3d(0, 0, 0);
-    opacity: 1;
-}
-
-to {
-    transform: translate3d(100%, 0, 0);
-    opacity: 0;
-}
-}
-
-.animate__fadeOutRight {
-animation-name: fadeOutRight;
-}
-
-@keyframes zoomIn {
-from {
-    opacity: 0;
-    transform: scale3d(0.3, 0.3, 0.3);
-}
-
-50% {
-    opacity: 1;
-}
-}
-
-.animate__zoomIn {
-animation-name: zoomIn;
-}
-
-@keyframes zoomInDown {
-from {
-    opacity: 0;
-    transform: scale3d(0.1, 0.1, 0.1) translate3d(0, -1000px, 0);
-    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
-}
-
-60% {
-    opacity: 1;
-    transform: scale3d(0.475, 0.475, 0.475) translate3d(0, 60px, 0);
-    animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
-}
-}
-
-.animate__zoomInDown {
-animation-name: zoomInDown;
-}
-
-@keyframes zoomInLeft {
-from {
-    opacity: 0;
-    transform: scale3d(0.1, 0.1, 0.1) translate3d(-1000px, 0, 0);
-    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
-}
-
-60% {
-    opacity: 1;
-    transform: scale3d(0.475, 0.475, 0.475) translate3d(60px, 0, 0);
-    animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
-}
-}
-
-.animate__zoomInLeft {
-animation-name: zoomInLeft;
-}
-
-@keyframes zoomInRight {
-from {
-    opacity: 0;
-    transform: scale3d(0.1, 0.1, 0.1) translate3d(1000px, 0, 0);
-    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
-}
-
-60% {
-    opacity: 1;
-    transform: scale3d(0.475, 0.475, 0.475) translate3d(-60px, 0, 0);
-    animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
-}
-}
-
-.animate__zoomInRight {
-animation-name: zoomInRight;
-}
-
-@keyframes zoomInUp {
-from {
-    opacity: 0;
-    transform: scale3d(0.1, 0.1, 0.1) translate3d(0, 1000px, 0);
-    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
-}
-
-60% {
-    opacity: 1;
-    transform: scale3d(0.475, 0.475, 0.475) translate3d(0, -60px, 0);
-    animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
-}
-}
-
-.animate__zoomInUp {
-animation-name: zoomInUp;
-}
-
-@keyframes zoomOut {
-from {
-    opacity: 1;
-}
-
-50% {
-    opacity: 0;
-    transform: scale3d(0.3, 0.3, 0.3);
-}
-
-to {
-    opacity: 0;
-}
-}
-
-.animate__zoomOut {
-animation-name: zoomOut;
-}
-
-@keyframes zoomOutDown {
-40% {
-    opacity: 1;
-    transform: scale3d(0.475, 0.475, 0.475) translate3d(0, -60px, 0);
-    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
-}
-
-to {
-    opacity: 0;
-    transform: scale3d(0.1, 0.1, 0.1) translate3d(0, 1000px, 0);
-    animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
-}
-}
-
-.animate__zoomOutDown {
-animation-name: zoomOutDown;
-}
-
-@keyframes zoomOutLeft {
-40% {
-    opacity: 1;
-    transform: scale3d(0.475, 0.475, 0.475) translate3d(60px, 0, 0);
-    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
-}
-
-to {
-    opacity: 0;
-    transform: scale3d(0.1, 0.1, 0.1) translate3d(-1000px, 0, 0);
-    animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
-}
-}
-
-.animate__zoomOutLeft {
-animation-name: zoomOutLeft;
-}
-
-@keyframes zoomOutRight {
-40% {
-    opacity: 1;
-    transform: scale3d(0.475, 0.475, 0.475) translate3d(-60px, 0, 0);
-    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
-}
-
-to {
-    opacity: 0;
-    transform: scale3d(0.1, 0.1, 0.1) translate3d(1000px, 0, 0);
-    animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
-}
-}
-
-.animate__zoomOutRight {
-animation-name: zoomOutRight;
-}
-
-@keyframes zoomOutUp {
-40% {
-    opacity: 1;
-    transform: scale3d(0.475, 0.475, 0.475) translate3d(0, 60px, 0);
-    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
-}
-
-to {
-    opacity: 0;
-    transform: scale3d(0.1, 0.1, 0.1) translate3d(0, -1000px, 0);
-    animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
-}
-}
-
-.animate__zoomOutUp {
-animation-name: zoomOutUp;
-}
-
-@keyframes slideInUp {
-from {
-    transform: translate3d(0, 100%, 0);
-    visibility: visible;
-}
-
-to {
-    transform: translate3d(0, 0, 0);
-}
-}
-
-.animate__slideInUp {
-animation-name: slideInUp;
-}
-
-@keyframes slideOutUp {
-from {
-    transform: translate3d(0, 0, 0);
-}
-
-to {
-    visibility: hidden;
-    transform: translate3d(0, -100%, 0);
-}
-}
-
-.animate__slideOutUp {
-animation-name: slideOutUp;
-}
-
-@keyframes slideInDown {
-from {
-    transform: translate3d(0, -100%, 0);
-    visibility: visible;
-}
-
-to {
-    transform: translate3d(0, 0, 0);
-}
-}
-
-.animate__slideInDown {
-animation-name: slideInDown;
-}
-
-@keyframes slideOutDown {
-from {
-    transform: translate3d(0, 0, 0);
-}
-
-to {
-    visibility: hidden;
-    transform: translate3d(0, 100%, 0);
-}
-}
-
-.animate__slideOutDown {
-animation-name: slideOutDown;
-}
-
-@keyframes slideInLeft {
-from {
-    transform: translate3d(-100%, 0, 0);
-    visibility: visible;
-}
-
-to {
-    transform: translate3d(0, 0, 0);
-}
-}
-
-.animate__slideInLeft {
-animation-name: slideInLeft;
-}
-
-@keyframes slideOutLeft {
-from {
-    transform: translate3d(0, 0, 0);
-}
-
-to {
-    visibility: hidden;
-    transform: translate3d(-100%, 0, 0);
-}
-}
-
-.animate__slideOutLeft {
-animation-name: slideOutLeft;
-}
-
-@keyframes slideInRight {
-from {
-    transform: translate3d(100%, 0, 0);
-    visibility: visible;
-}
-
-to {
-    transform: translate3d(0, 0, 0);
-}
-}
-
-.animate__slideInRight {
-animation-name: slideInRight;
-}
-
-@keyframes slideOutRight {
-from {
-    transform: translate3d(0, 0, 0);
-}
-
-to {
-    visibility: hidden;
-    transform: translate3d(100%, 0, 0);
-}
-}
-
-.animate__slideOutRight {
-animation-name: slideOutRight;
-}
-
-@keyframes slideIn {
-    to {
-      right: 0; /* Slide to its original position */
-    }
 }
