--- a/css/_main.scss
+++ b/css/_main.scss
@@ -245,6 +245,10 @@ h2 {
       background-image: url(../img/Screenshot_5.png);
     }
 
+    .memory {
+      background-image: url(../img/Screenshot_6.png);
+    }
+
     .ta {
       background-image: url(../img/screenshotta.png);
     }
