--- a/css/styles.css
+++ b/css/styles.css
@@ -275,6 +275,10 @@ h2 {
   background-image: url(../img/Screenshot_5.png);
 }
 
+.mywork .project .memory {
+  background-image: url(../img/Screenshot_6.png);
+}
+
 .mywork .project .ta {
   background-image: url(../img/screenshotta.png);
 }
