--- a/css/_main.scss
+++ b/css/_main.scss
@@ -264,6 +264,10 @@ h2 {
     .spp {
       background-image: url(../img/screenshotspp.png);
     }
+    
+    .flutter {
+      background-image: url(../img/Screenshot_38.png);
+    }
   }
 
   .project-list {
