--- a/css/_main.scss
+++ b/css/_main.scss
@@ -7,11 +7,11 @@ html {
   font-family: 'Montserrat', sans-serif;
 
   body {
-    background-color: color(dark-blue);
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpath fill='%2327337c' d='M486 705.8c-109.3-21.8-223.4-32.2-335.3-19.4C99.5 692.1 49 703 0 719.8V800h843.8c-115.9-33.2-230.8-68.1-347.6-92.2C492.8 707.1 489.4 706.5 486 705.8z'/%3E%3Cpath fill='%23252e72' d='M1600 0H0v719.8c49-16.8 99.5-27.8 150.7-33.5c111.9-12.7 226-2.4 335.3 19.4c3.4 0.7 6.8 1.4 10.2 2c116.8 24 231.7 59 347.6 92.2H1600V0z'/%3E%3Cpath fill='%23242a68' d='M478.4 581c3.2 0.8 6.4 1.7 9.5 2.5c196.2 52.5 388.7 133.5 593.5 176.6c174.2 36.6 349.5 29.2 518.6-10.2V0H0v574.9c52.3-17.6 106.5-27.7 161.1-30.9C268.4 537.4 375.7 554.2 478.4 581z'/%3E%3Cpath fill='%2321255e' d='M0 0v429.4c55.6-18.4 113.5-27.3 171.4-27.7c102.8-0.8 203.2 22.7 299.3 54.5c3 1 5.9 2 8.9 3c183.6 62 365.7 146.1 562.4 192.1c186.7 43.7 376.3 34.4 557.9-12.6V0H0z'/%3E%3Cpath fill='%231F2155' d='M181.8 259.4c98.2 6 191.9 35.2 281.3 72.1c2.8 1.1 5.5 2.3 8.3 3.4c171 71.6 342.7 158.5 531.3 207.7c198.8 51.8 403.4 40.8 597.3-14.8V0H0v283.2C59 263.6 120.6 255.7 181.8 259.4z'/%3E%3Cpath fill='%231d1f50' d='M1600 0H0v136.3c62.3-20.9 127.7-27.5 192.2-19.2c93.6 12.1 180.5 47.7 263.3 89.6c2.6 1.3 5.1 2.6 7.7 3.9c158.4 81.1 319.7 170.9 500.3 223.2c210.5 61 430.8 49 636.6-16.6V0z'/%3E%3Cpath fill='%231b1d4b' d='M454.9 86.3C600.7 177 751.6 269.3 924.1 325c208.6 67.4 431.3 60.8 637.9-5.3c12.8-4.1 25.4-8.4 38.1-12.9V0H288.1c56 21.3 108.7 50.6 159.7 82C450.2 83.4 452.5 84.9 454.9 86.3z'/%3E%3Cpath fill='%231a1b46' d='M1600 0H498c118.1 85.8 243.5 164.5 386.8 216.2c191.8 69.2 400 74.7 595 21.1c40.8-11.2 81.1-25.2 120.3-41.7V0z'/%3E%3Cpath fill='%23181942' d='M1397.5 154.8c47.2-10.6 93.6-25.3 138.6-43.8c21.7-8.9 43-18.8 63.9-29.5V0H643.4c62.9 41.7 129.7 78.2 202.1 107.4C1020.4 178.1 1214.2 196.1 1397.5 154.8z'/%3E%3Cpath fill='%2316173D' d='M1315.3 72.4c75.3-12.6 148.9-37.1 216.8-72.4h-723C966.8 71 1144.7 101 1315.3 72.4z'/%3E%3C/g%3E%3C/svg%3E");
-    background-attachment: fixed;
-    background-size: cover;
-    height: 100%;
+    background-color: #000;
+    // background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpath fill='%2327337c' d='M486 705.8c-109.3-21.8-223.4-32.2-335.3-19.4C99.5 692.1 49 703 0 719.8V800h843.8c-115.9-33.2-230.8-68.1-347.6-92.2C492.8 707.1 489.4 706.5 486 705.8z'/%3E%3Cpath fill='%23252e72' d='M1600 0H0v719.8c49-16.8 99.5-27.8 150.7-33.5c111.9-12.7 226-2.4 335.3 19.4c3.4 0.7 6.8 1.4 10.2 2c116.8 24 231.7 59 347.6 92.2H1600V0z'/%3E%3Cpath fill='%23242a68' d='M478.4 581c3.2 0.8 6.4 1.7 9.5 2.5c196.2 52.5 388.7 133.5 593.5 176.6c174.2 36.6 349.5 29.2 518.6-10.2V0H0v574.9c52.3-17.6 106.5-27.7 161.1-30.9C268.4 537.4 375.7 554.2 478.4 581z'/%3E%3Cpath fill='%2321255e' d='M0 0v429.4c55.6-18.4 113.5-27.3 171.4-27.7c102.8-0.8 203.2 22.7 299.3 54.5c3 1 5.9 2 8.9 3c183.6 62 365.7 146.1 562.4 192.1c186.7 43.7 376.3 34.4 557.9-12.6V0H0z'/%3E%3Cpath fill='%231F2155' d='M181.8 259.4c98.2 6 191.9 35.2 281.3 72.1c2.8 1.1 5.5 2.3 8.3 3.4c171 71.6 342.7 158.5 531.3 207.7c198.8 51.8 403.4 40.8 597.3-14.8V0H0v283.2C59 263.6 120.6 255.7 181.8 259.4z'/%3E%3Cpath fill='%231d1f50' d='M1600 0H0v136.3c62.3-20.9 127.7-27.5 192.2-19.2c93.6 12.1 180.5 47.7 263.3 89.6c2.6 1.3 5.1 2.6 7.7 3.9c158.4 81.1 319.7 170.9 500.3 223.2c210.5 61 430.8 49 636.6-16.6V0z'/%3E%3Cpath fill='%231b1d4b' d='M454.9 86.3C600.7 177 751.6 269.3 924.1 325c208.6 67.4 431.3 60.8 637.9-5.3c12.8-4.1 25.4-8.4 38.1-12.9V0H288.1c56 21.3 108.7 50.6 159.7 82C450.2 83.4 452.5 84.9 454.9 86.3z'/%3E%3Cpath fill='%231a1b46' d='M1600 0H498c118.1 85.8 243.5 164.5 386.8 216.2c191.8 69.2 400 74.7 595 21.1c40.8-11.2 81.1-25.2 120.3-41.7V0z'/%3E%3Cpath fill='%23181942' d='M1397.5 154.8c47.2-10.6 93.6-25.3 138.6-43.8c21.7-8.9 43-18.8 63.9-29.5V0H643.4c62.9 41.7 129.7 78.2 202.1 107.4C1020.4 178.1 1214.2 196.1 1397.5 154.8z'/%3E%3Cpath fill='%2316173D' d='M1315.3 72.4c75.3-12.6 148.9-37.1 216.8-72.4h-723C966.8 71 1144.7 101 1315.3 72.4z'/%3E%3C/g%3E%3C/svg%3E");
+    // background-attachment: fixed;
+    // background-size: cover;
+    // background: linear-gradient(150deg, #0368b5 0%, #000b42 100%);    height: 100%;
     min-height: 100%;
   }
 }
@@ -24,7 +24,7 @@ nav {
   }
 
   a {
-    color: #3139a1;
+    color: color(dark-blue);
     font-family: 'Courier New', Courier, monospace;
     font-weight: 700;
     font-size: 1.2rem;
@@ -48,7 +48,7 @@ nav {
   }
 }
 
-ul {
+nav ul {
   list-style: none;
   display: flex;
   justify-content: space-around;
@@ -64,6 +64,8 @@ ul {
 
 h2 {
   color: #fff;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: 700;
 }
 
 .content {
@@ -79,7 +81,39 @@ h2 {
   }
 }
 
-.main {
+.content-2,
+.content#about,
+.content#contact {
+  background: linear-gradient(150deg, #3139a1 0%, #10154c 100%);
+  clip-path: polygon(6% 0, 0 28%, 0 37%, 8% 0, 20% 0, 0 100%, 95% 100%, 100% 73%, 100% 64%, 93% 100%, 80% 100%, 100% 0);
+  // clip-path: polygon(80% 100%, 97% 100%, 100% 84%, 100% 72%, 95% 100%, 86% 100%, 100% 30%, 100% 19%, 84% 100%, 0 100%, 20% 0, 2% 0, 0 14%, 0 26%, 4% 0, 14% 0, 0 73%, 0 82%, 16% 0, 100% 0);
+
+  @media (max-width: 1024px) {
+    clip-path: none;
+  }
+}
+
+// .content#mywork {
+//   border-top: 1px dashed color(dark-blue);
+// }
+
+// .content-2 {
+//   // clip-path: polygon(20% 0%, 100% 0%, 80% 100%, 0% 100%);
+//   clip-path: polygon(6% 0, 0 28%, 0 37%, 8% 0, 20% 0, 0 100%, 95% 100%, 100% 73%, 100% 64%, 93% 100%, 80% 100%, 100% 0);
+
+//   @media (max-width: 1024px) {
+//     clip-path: none;
+//   }
+// }
+
+.content#about {
+  p {
+    line-height: 1.7rem;
+    word-spacing: 4px;
+  }
+}
+
+  .main {
   width: 100%;
   height: 100%;
   color: white;
@@ -254,7 +288,7 @@ h2 {
     }
 
     .lib {
-      background-image: url(../img/screenshotlib.png);
+      background-image: url(../img/screenshot-library.png);
     }
 
     .cfb {
@@ -266,7 +300,10 @@ h2 {
     }
     
     .flutter {
-      background-image: url(../img/Screenshot_38.png);
+      background-image: url(../img/giphy_search_1.png);
+    }
+    .jelly-beans {
+      background-image: url(../img/jelly-belly-sc.png);
     }
   }
 
@@ -306,6 +343,7 @@ h2 {
 
   .first {
     text-shadow: 2px 2px 6px #000625;
+    font-weight: 700;
   }
 
   .second {
@@ -317,6 +355,7 @@ h2 {
   .third {
     animation: bounceInDown 5s ease;
     text-shadow: 2px 2px 6px #000625;
+    font-weight: 700;
   }
 
   .fourth {
@@ -362,6 +401,10 @@ footer {
 .content-2 {
   position: relative;
   overflow: hidden;
+  .text{
+      font-family: 'Courier New', Courier, monospace;
+  font-weight: 700;
+  }
 }
 
 .wrap-it {
@@ -518,14 +561,15 @@ p {
 
   @include media-query('min', $desktop) {
     height: 80px;
+    object-fit: contain;
   }
 }
 
 .type {
   margin-top: 0;
-  font-size: 10px;
   text-align: center;
   color: white;
+  font-family: 'Courier New', Courier, monospace;
 
   @include media-query('min', $desktop) {
     font-size: 14px;
@@ -552,7 +596,19 @@ p {
   padding-bottom: 50px;
 
   h2 {
-    color: #283886;
+    color: color(dark-blue);
     text-align: center;
+  }
+}
+
+.span-text {
+  color: color(light-blue);
+}
+
+.projects-ul {
+  padding-left: 15px !important;
+  li {
+    text-align: left;
+    font-size: 0.8rem;
   }
 }
